--- a/database-image/Dockerfile
+++ b/database-image/Dockerfile
@@ -1,5 +1,9 @@
 FROM mongo:latest
 
-EXPOSE 27017
+# Set permissions for the /data/db directory
+RUN mkdir -p /data/db && chown -R mongodb:mongodb /data/db
 
+USER mongodb
+
+EXPOSE 27017
 CMD ["mongod"]
